objects/SFDC_Industry_Mapping_Object__mdt.object
<CustomObject>
    <description>Standard and Custom objects that exist in the SFDC Industries package that the subscriber org is transitioning to</description>
    <fields>
        <fullName>Description_Label__c</fullName>
        <description>A reference to the Custom Label that houses this object&apos;s description.</description>
        <inlineHelpText>A reference to the Custom Label that houses this object&apos;s description.</inlineHelpText>
        <label>Description Label</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If unchecked, skips this object for mapping.</description>
        <inlineHelpText>If unchecked, skips this object for mapping.</inlineHelpText>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hidden_Record_Types__c</fullName>
        <description>If populated, indicates the record types that should be hidden from the user during mapping.</description>
        <inlineHelpText>If populated, indicates the record types that should be hidden from the user during mapping.</inlineHelpText>
        <label>Hidden Record Types</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Index__c</fullName>
        <description>The order in which this object should show within the mapping screen. (Lower numbers show first)</description>
        <inlineHelpText>The order in which this object should show within the mapping screen. (Lower numbers show first)</inlineHelpText>
        <label>Index</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mapping_Section__c</fullName>
        <description>Which mapping screen this object should be shown on (If none specified, this object will only be shown on the final mapping screen).</description>
        <inlineHelpText>Which mapping screen this object should be shown on (If none specified, this object will only be shown on the final mapping screen).</inlineHelpText>
        <label>Mapping Section</label>
        <referenceTo>SFDC_Industry_Mapping_Section__mdt</referenceTo>
        <relationshipLabel>SFDC Industry Mapping Objects</relationshipLabel>
        <relationshipName>SFDC_Industry_Mapping_Objects</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Object_API_Name__c</fullName>
        <label>Object API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>SFDC Industry Mapping Object</label>
    <listViews>
        <fullName>All</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Object_API_Name__c</columns>
        <columns>Index__c</columns>
        <columns>Enabled__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Mappings</fullName>
        <columns>MasterLabel</columns>
        <columns>Enabled__c</columns>
        <columns>Mapping_Section__c</columns>
        <columns>Object_API_Name__c</columns>
        <columns>Description_Label__c</columns>
        <columns>Index__c</columns>
        <columns>Hidden_Record_Types__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Mappings</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>SFDC Industry Mapping Objects</pluralLabel>
</CustomObject>